# nn-from-scratch

./: CMakeLists.txt  Layer.cpp  Layer.hpp  MLP.cpp  MLP.hpp  Neuron.cpp  Neuron.hpp  Tensor.cpp  Tensor.hpp  Value.cpp  Value.hpp  graph.cpp  graph.dot  graph.hpp  main  main.cpp  trainer.cpp  trainer.hpp
